# mcp-bbs

./: .gitignore  BOT_TEST_RESULTS.md  DEBUG_GUIDE.md  DIAGNOSIS.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  SCREEN_AUDIT.md  TWGS-LOGIN-SEQUENCE.md  brute_force_entry.py  capture_screen.py  capture_twgs_menu.py  connect_and_wait.py  debug_after_login.py  debug_bot_exact_sequence.py  debug_diagnostic_phase1.py  debug_game_loading_detailed.py  debug_game_selection.py  debug_initial_screen.py  debug_login_diagnostic.py  debug_login_diagnostic_fixed.py  debug_login_show_screens.py  debug_raw_session.py  debug_screen_content.py  debug_skip_first_two.py  fix_password.py  generate_test_matrix.py  launch_stress_test.py  launch_stress_test_waves.py  manual_telnet_test.md  monitor_completion.py  monitor_stress_test.sh  output.txt  persistent_ai_bot.yaml  persistent_bot.yaml  play_tw2002.py  play_tw2002_1000turns.py  (+36 more)
.claude/: settings.local.json
.gemini/: settings.json
.provide/: 1000turn-debug.txt  1000turn-fixed.txt  1000turn-live-output.txt  1000turn-run.txt  DOCUMENTATION_INDEX.md  HANDOFF-enhancements.md  HANDOFF-intelligent-bot.md  HANDOFF-prompt-detection.md  HANDOFF.md  HANDOFF_SCREEN_FIXES.md  IMPLEMENTATION_GAME_MCP_TOOLS.md  INTERVENTION_SYSTEM.md  RALPH_LOOP_PROMPT.md  READY_FOR_TESTING.md  SWARM_ARCHITECTURE.md  TESTING_GUIDE.md  bot-screen-capture.txt  tw2002-1000turns-1770165140.json  tw2002-1000turns-1770165140.md  tw2002-1000turns-1770169781.json  tw2002-1000turns-1770169781.md  tw2002-1000turns-1770169927.json  tw2002-1000turns-1770169927.md  tw2002-1000turns-1770170777.json  tw2002-1000turns-1770170777.md  tw2002-1000turns-1770170879.json  tw2002-1000turns-1770170879.md  tw2002-1000turns-1770170996.json  tw2002-1000turns-1770170996.md  tw2002-1000turns-1770171075.json  tw2002-1000turns-1770171075.md  tw2002-complete-1770159926.json  tw2002-complete-1770159926.md  tw2002-playthrough-1770159828.json  tw2002-playthrough-1770159828.md  tw2002-session-2026-02-03.md
.provide/archive/: 2026-02-03_telnet_fix.md  2026-02-06_ai_strategy.md  2026-02-06_framework_extraction.md  2026-02-06_logging_cleanup.md  2026-02-06_refactoring_complete.md  2026-02-06_themed_names.md  ARCHITECTURE-OVERVIEW.md  IMPLEMENTATION-CHECKLIST.md  PLAYTHROUGH-RESULTS.md
.specify/memory/: constitution.md
config/: test_ai_intervention.yaml  test_ai_manual_intervention.yaml  test_opportunistic_stuck.yaml
config/swarm_demo/: bot_01.yaml  bot_02.yaml  bot_03.yaml  bot_04.yaml  bot_05.yaml  bot_06.yaml  bot_07.yaml  bot_08.yaml  bot_09.yaml  bot_10.yaml  bot_11.yaml  bot_12.yaml  bot_13.yaml  bot_14.yaml  bot_15.yaml  bot_16.yaml  bot_17.yaml  bot_18.yaml  bot_19.yaml  bot_20.yaml  bot_21.yaml  bot_22.yaml  bot_23.yaml  bot_24.yaml  bot_25.yaml  bot_26.yaml  bot_27.yaml  bot_28.yaml  bot_29.yaml  bot_30.yaml  bot_31.yaml  bot_32.yaml  bot_34.yaml  bot_35.yaml  bot_36.yaml  bot_39.yaml  bot_40.yaml  bot_42.yaml  bot_45.yaml  bot_46.yaml  (+33 more)
config/swarm_demo_ai/: bot_01.yaml  bot_04.yaml  bot_12.yaml
config/swarm_play_to_win/: bot_01.yaml  bot_02.yaml  bot_03.yaml  bot_04.yaml  bot_05.yaml
config/test_matrix/: 01_gameA_opp_t15_e2_b1.yaml  01_game_A_opportunistic.yaml  02_gameA_opp_t15_e2_b0.yaml  02_game_B_opportunistic.yaml  03_gameA_opp_t15_e5_b1.yaml  03_game_C_ai_basic.yaml  04_gameA_opp_t15_e5_b0.yaml  05_gameA_opp_t15_e8_b1.yaml  06_gameA_opp_t15_e8_b0.yaml  07_gameA_opp_t30_e2_b1.yaml  08_gameA_opp_t30_e2_b0.yaml  09_gameA_opp_t30_e5_b1.yaml  100_gameC_ai_t30_int_auto0_b0.yaml  101_gameC_ai_t30_int_auto1_b1.yaml  102_gameC_ai_t30_int_auto1_b0.yaml  103_gameC_ai_t50_no_int_b1.yaml  104_gameC_ai_t50_no_int_b0.yaml  105_gameC_ai_t50_int_auto0_b1.yaml  106_gameC_ai_t50_int_auto0_b0.yaml  107_gameC_ai_t50_int_auto1_b1.yaml  108_gameC_ai_t50_int_auto1_b0.yaml  10_gameA_opp_t30_e5_b0.yaml  11_gameA_opp_t30_e8_b1.yaml  12_gameA_opp_t30_e8_b0.yaml  13_gameA_opp_t50_e2_b1.yaml  14_gameA_opp_t50_e2_b0.yaml  15_gameA_opp_t50_e5_b1.yaml  16_gameA_opp_t50_e5_b0.yaml  17_gameA_opp_t50_e8_b1.yaml  18_gameA_opp_t50_e8_b0.yaml  19_gameB_opp_t15_e2_b1.yaml  20_gameB_opp_t15_e2_b0.yaml  21_gameB_opp_t15_e5_b1.yaml  22_gameB_opp_t15_e5_b0.yaml  23_gameB_opp_t15_e8_b1.yaml  24_gameB_opp_t15_e8_b0.yaml  25_gameB_opp_t30_e2_b1.yaml  26_gameB_opp_t30_e2_b0.yaml  27_gameB_opp_t30_e5_b1.yaml  28_gameB_opp_t30_e5_b0.yaml  (+71 more)
docs/: ARCHITECTURE_DIAGRAM.md  HANDOFF_2026-02-15.md  LOGIN_EDGE_CASES.md  README.md  RELEASE_CHECKLIST.md  SYSTEM_ARCHITECTURE.md  TW2002_MCP_OPERATIONS.md  generate_diagrams.py
docs/archive/: SCRIPTS_ARCHIVE_2026-02-16.md
docs/diagrams/: architecture.mmd  architecture.txt  session-flow.mmd  workflow.mmd  workflow.txt
docs/guides/: INTELLIGENT_BOT.md  MULTI_CHARACTER.md  QUICK_START.md  SWARM_OPERATIONS_TELEMETRY.md
examples/: AI_STRATEGY_QUICKSTART.md  simple_game_bot.py
examples/configs/: README.md  ai_strategy_ollama.yml  ai_strategy_openai.yml  test_ai_intervention.yaml  themed_names.yml  (+1 more)
scripts/: ai_transcript_demo.py  check_test_readiness.sh  e2e_swarm_ai_smoke_gate.sh  play_to_win.py  run_verification.py  swarm_autocorrect.py  swarm_monitor.py  swarm_summary_watch.py  test_computer_tavern.py  test_full_gameplay.py  test_intervention_live.sh  test_stuck_bot_recovery.py  test_trading_integration.py  verify_intervention_system.py
tests/: __init__.py  conftest.py  mock_bbs_server.py  test_chaos_transport.py  test_client.py  test_config.py  test_dashboard_root_redirect.py  test_discover.py  test_hijack_step.py  test_iac_escaping.py  test_jsonl_replay.py  test_keepalive.py  test_learn.py  test_learn_extended.py  test_localhost_integration.py  test_login_prompts.py  test_login_sequence.py  test_manager_timeseries.py  test_orientation.py  test_orientation_hypothesis.py  test_path_validation.py  test_session_manager.py  test_session_reader_with_chaos.py  test_swarm_routes_events.py  test_telnet_client.py  test_telnet_protocol.py  test_telnet_protocol_extended.py  test_term_hijack_api.py  test_term_routes.py  test_terminal_screen_utils.py
(+445 files in other folders)
