[project]
name = "mcp-bbs"
version = "0.2.1"
description = "FastMCP-based telnet client for BBS systems with auto-learning capabilities"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Tim Perkins"}
]
keywords = ["mcp", "bbs", "telnet", "fastmcp", "retro-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]

dependencies = [
    "fastmcp>=0.1.0",
    "pexpect>=4.9.0",
    "pydantic>=2.6.0",
    "pyte>=0.8.1",
    "platformdirs>=4.0.0",
    "structlog>=24.1.0",
    "hypothesis>=6.151.5",
]
# Note: twerk (TW2002 data file library) is available via _twerk.pth in the venv
# Location: /Users/tim/code/gh/livingstaccato/tw2002/twerk-py/src
# Used by twbot for direct file access to TW2002 game data

[project.optional-dependencies]
dev = [
    "ty>=0.0.12",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mermaid-py>=0.8.0",
]

[project.scripts]
mcp-bbs = "mcp_bbs.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_bbs"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "pyte.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pexpect.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=mcp_bbs",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
