[project]
name = "bbsbot"
version = "0.2.1"
description = "FastMCP-based telnet client for BBS systems with auto-learning capabilities"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    {name = "provide.io llc"}
]
keywords = ["mcp", "bbs", "telnet", "fastmcp", "retro-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later",
]

dependencies = [
    "fastmcp>=0.1.0",
    "click>=8.1.7",
    "pexpect>=4.9.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "pyte>=0.8.1",
    "platformdirs>=4.0.0",
    "structlog>=24.1.0",
    "hypothesis>=6.151.5",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "psutil>=7.2.2",
    "rich>=13.0.0",
]
# Note: twerk (TW2002 data file library) is available via _twerk.pth in the venv
# Location: /Users/tim/code/gh/livingstaccato/tw2002/twerk-py/src
# Used by bbsbot for direct file access to TW2002 game data

[project.optional-dependencies]
swarm = [
    "websockets>=12.0",
]
dev = [
    "ty>=0.0.12",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mermaid-py>=0.8.0",
]

[project.scripts]
bbsbot = "bbsbot.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "pyte.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pexpect.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "mypy>=1.19.1",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
]
